--- a/R checks/3_working_paper_outputs.qmd
+++ b/R checks/3_working_paper_outputs.qmd
@@ -252,7 +252,9 @@ temp <- se_sample %>%
          wpfinwgt,
          val,
          profposi,
-         prof10k) %>% 
+         prof10k, 
+         thnetworth
+         ) %>% 
   mutate(unemp_f12_6 = factor(ifelse(unemp_f12 >=6, 1,0), labels = c("Not Unemployed", "Unemployed")),
          unemp_f12_3 = factor(ifelse(unemp_f12 >=3, 1,0), labels = c("Not Unemployed", "Unemployed")))
 
@@ -274,7 +276,8 @@ temp_earnings <- se_sample %>%
 
 person_year <- left_join(temp_earnings, temp, by = c("ssuid_spanel_pnum", "calyear")) %>% 
   mutate(industry_experience = case_when(mode_industry == industry_y1_mode ~ 1,
-                                         .default = 0))
+                                         .default = 0),
+         ln_thnetworth = log_transform(thnetworth))
 
 ```
 
@@ -298,7 +301,8 @@ person_year <- person_year %>%
     calyear = "Year",
     profposi = "Positive Profit",
     prof10k = "Profit >=10k",
-    industry_experience = "Prior Industry Experience"
+    industry_experience = "Prior Industry Experience",
+    ln_thnetworth = "Log HH Net Worth",
   )
     
 ```
@@ -319,7 +323,7 @@ age
 
 ```{r}
 data_overview <- datasummary(
-  tpearn_annual + factor(profposi) + factor(prof10k) + sex_fct + race_eth_fct_cpsd + educ_fct + immig_fct + married + parent_std + tage + factor(calyear) + factor(industry_experience) ~ N + Percent()+ Mean + SD + Median,
+  tpearn_annual + sex_fct + race_eth_fct_cpsd + educ_fct + immig_fct + married + parent_std + tage + thnetworth + factor(calyear) + factor(industry_experience) ~ N + Percent()+ Mean + SD + Median,
   data = person_year,
    fmt = fmt_sprintf("%.0f"),
     title = 'Data Overview Table',
@@ -338,7 +342,7 @@ writeData(wb, data_overview, sheet = "Data Overview")
 library(ggcorrplot)
 
 cor_df <- person_year %>% 
-  select(tpearn_annual, profposi, prof10k, sex_fct, race_eth_fct_cpsd, educ_fct, immig_fct, married, parent_std, tage, calyear, industry_experience)
+  select(tpearn_annual, unemp_f12_6, sex_fct, race_eth_fct_cpsd, educ_fct, immig_fct, married, parent_std, tage, calyear, industry_experience)
 cor_matrix <- model.matrix(~0+., data=cor_df) %>% 
   cor() %>% 
   rstatix::pull_lower_triangle()
@@ -361,7 +365,15 @@ person_year <- person_year %>%
 
 
 library(plm)
-unemp_m1_plm <- plm(ln_tpearn_annual ~ unemp_f12_6  + 
+unemp_m1_plm <- plm(ln_tpearn_annual ~ unemp_f12_6, 
+                    data = person_year, 
+                    index = c("ssuid_spanel_pnum", "calyear"),
+                    model = "random",
+                    random.method = "walhus")
+
+
+unemp_m2_plm <- plm(ln_tpearn_annual ~ unemp_f12_6  + 
+                   race_eth_fct_cpsd + 
                    educ_fct + 
                    tage + 
                    age_sq + 
@@ -370,19 +382,33 @@ unemp_m1_plm <- plm(ln_tpearn_annual ~ unemp_f12_6  +
                    married + 
                    parent_std +
                    calyear + 
-                   mode_industry , data = person_year,
+                   ln_thnetworth , data = person_year,
                    index = c("ssuid_spanel_pnum", "calyear"), 
-                   model = "random")
+                   model = "random",random.method = "walhus")
 
-unemp_m2_plm <- update(unemp_m1_plm, . ~. + race_eth_fct_cpsd)
 
-## Adding in industry experience
-unemp_m1_plm_industry <- update(unemp_m1_plm, . ~. + industry_experience)
-unemp_m2_plm_industry <- update(unemp_m2_plm, . ~. + industry_experience)
 
-## removing mode_industry 
-unemp_m1_plm_exp <- update(unemp_m1_plm,. ~. + industry_experience -mode_industry)
-unemp_m2_plm_exp <- update(unemp_m2_plm,.~. + industry_experience - mode_industry)
+## checking that using the walhus from above produces same estimates. IF we don't use walhus above it won't estimate the model for the one-variable model 
+# unemp_m2_plmtest <- plm(ln_tpearn_annual ~ unemp_f12_6  + 
+#                    race_eth_fct_cpsd + 
+#                    educ_fct + 
+#                    tage + 
+#                    age_sq + 
+#                    sex_fct + 
+#                    immig_fct + 
+#                    married + 
+#                    parent_std +
+#                    calyear + 
+#                    mode_industry , data = person_year,
+#                    index = c("ssuid_spanel_pnum", "calyear"), 
+#                    model = "random")
+
+
+unemp_m3_plm <- update(unemp_m2_plm, . ~. + mode_industry)
+unemp_m4_plm <- update(unemp_m3_plm, . ~ . +industry_experience)
+unemp_m5_plm <- update(unemp_m4_plm, . ~ . +industry_experience*unemp_f12_6)
+unemp_m6_plm <- update(unemp_m5_plm, . ~ . -mode_industry)
+
 
 
 ```
@@ -395,6 +421,7 @@ mapping <- c(
   "unemp_f12_6Unemployed" = "Unemployed 6+",
   "race_eth_fct_cpsdNon_white" = "Non-White",
   "industry_experience" = "Prior Industry Experience: Yes",
+  "unemp_f12_6Unemployed:industry_experience" = "Unemployed*Prior Industry Experience",
   
   # Demographic Variables
   "sex_fctFemale" = "Female",
@@ -405,8 +432,8 @@ mapping <- c(
   "parent_stdParent" = "Parent",
   
   # Education 
-  "educ_fctSome College or Assoc" = "Educ: Some College or Assoc",
-  "educ_fct4-year Degree or More" = "Educ: 4-Year Degree +",
+  "educ_fctSome College or Assoc" = "Some College or Assoc",
+  "educ_fct4-year Degree or More" = "4-Year Degree +",
   
   # Year Effects
   "calyear2015" = "2015",
@@ -418,18 +445,18 @@ mapping <- c(
   "calyear2022" = "2022",
   
   # Industry Effects
-  "mode_industryConstruction" = "Industry: Construction",
-  "mode_industryOther Services, Except Public Administration" = "Industry: Other Services",
-  "mode_industryEducational Services, and Health Care and Social Assistance" = "Industry: Educ. & Health",
-  "mode_industryFinance and Insurance, and Real Estate, and Rental and Leasing" = "Industry: Finance & Real Estate",
-  "mode_industryRetail Trade" = "Industry: Retail Trade",
-  "mode_industryArts, Entertainment, and Recreation, and Accommodation and Food Services" = "Industry: Arts & Food Services",
-  "mode_industryForestry, Farming, Fishing, Hunting, & Mining" = "Industry: Forestry, Farming, & Mining",
-  "mode_industryTransportation, Warehousing & Utilities" = "Industry: Transport. & Utilities",
-  "mode_industryManufacturing" = "Industry: Manufacturing",
-  "mode_industryWholesale Trade" = "Industry: Wholesale Trade",
-  "mode_industryInformation" = "Industry: Information",
-  "mode_industryPublic Administration" = "Industry: Public Administration",
+  "mode_industryConstruction" = "Construction",
+  "mode_industryOther Services, Except Public Administration" = "Other Services",
+  "mode_industryEducational Services, and Health Care and Social Assistance" = "Educ. & Health",
+  "mode_industryFinance and Insurance, and Real Estate, and Rental and Leasing" = "Finance & Real Estate",
+  "mode_industryRetail Trade" = "Retail Trade",
+  "mode_industryArts, Entertainment, and Recreation, and Accommodation and Food Services" = "Arts & Food Services",
+  "mode_industryForestry, Farming, Fishing, Hunting, & Mining" = "Forestry, Farming, & Mining",
+  "mode_industryTransportation, Warehousing & Utilities" = "Transport. & Utilities",
+  "mode_industryManufacturing" = "Manufacturing",
+  "mode_industryWholesale Trade" = "Wholesale Trade",
+  "mode_industryInformation" = "Information",
+  "mode_industryPublic Administration" = "Public Administration",
   
   "(Intercept)" = "(Intercept)",
   # catch-all 
@@ -454,17 +481,17 @@ rows_to_add <- tribble(
   "Professional, Scientific, and Management, and Administrative, and Waste Management Services 
  (Reference)", "", "", "", "", "", "" # 28
 )
-attr(rows_to_add, 'position') <- c(1, 3, 5, 7, 11, 13, 15, 17, 20,28)
+attr(rows_to_add, 'position') <- c(1, 3, 5, 8, 12, 14, 16, 18, 21,29)
 ```
 
 
 ```{r}
 tbl3_unemp_models_rse <- modelsummary(list(unemp_m1_plm,
                                            unemp_m2_plm, 
-                                           unemp_m1_plm_industry, 
-                                           unemp_m2_plm_industry,
-                                           unemp_m1_plm_exp, 
-                                           unemp_m2_plm_exp), 
+                                           unemp_m3_plm, 
+                                           unemp_m4_plm,
+                                           unemp_m5_plm, 
+                                           unemp_m6_plm), 
                                       coef_map = mapping,
                                       add_rows = rows_to_add,
                                       estimate = "{estimate} ({std.error}){stars}",
@@ -481,9 +508,21 @@ writeData(wb, tbl3_unemp_models_rse, sheet = "Tbl 3 Reg Unemp Earn RSE")
 
 
 
-# Profits Unemployment
-```{r models for positive profit}
-m1_unemp_prftb <- glmer(profposi ~ unemp_f12_6  + 
+
+## Earnings Y1_Status models 
+```{r unemployment earnings models }
+
+
+library(plm)
+status_m1_plm <- plm(ln_tpearn_annual ~ y1_status_v2,
+                    data = person_year, 
+                    index = c("ssuid_spanel_pnum", "calyear"),
+                    model = "random",
+                    random.method = "walhus")
+
+
+status_m2_plm <- plm(ln_tpearn_annual ~ y1_status_v2  + 
+                   race_eth_fct_cpsd + 
                    educ_fct + 
                    tage + 
                    age_sq + 
@@ -491,23 +530,214 @@ m1_unemp_prftb <- glmer(profposi ~ unemp_f12_6  +
                    immig_fct + 
                    married + 
                    parent_std +
-                   as.factor(calyear) + 
-                   mode_industry +
-                   (1 | ssuid_spanel_pnum),
-                   control = glmerControl(optimizer = "nloptwrap",
-                                          calc.derivs = FALSE),
-                 data = person_year, family = binomial)
+                   calyear + 
+                   ln_thnetworth , data = person_year,
+                   index = c("ssuid_spanel_pnum", "calyear"), 
+                   model = "random",random.method = "walhus")
 
 
-m2_unemp_prftb <- update(m1_unemp_prftb, . ~ .  + race_eth_fct_cpsd)
 
-## adding industry experience
-m1_unemp_prftb_ind <- update(m1_unemp_prftb, . ~. + industry_experience)
-m2_unemp_prftb_ind <- update(m2_unemp_prftb, . ~. + industry_experience)
+## checking that using the walhus from above produces same estimates. IF we don't use walhus above it won't estimate the model for the one-variable model 
+# status_m2_plmtest <- plm(ln_tpearn_annual ~ status_f12_6  + 
+#                    race_eth_fct_cpsd + 
+#                    educ_fct + 
+#                    tage + 
+#                    age_sq + 
+#                    sex_fct + 
+#                    immig_fct + 
+#                    married + 
+#                    parent_std +
+#                    calyear + 
+#                    mode_industry , data = person_year,
+#                    index = c("ssuid_spanel_pnum", "calyear"), 
+#                    model = "random")
 
-## removing mode_industry
-m1_unemp_prftb_exp <- update(m1_unemp_prftb, . ~. +industry_experience -mode_industry)
-m2_unemp_prftb_exp <- update(m2_unemp_prftb,. ~. + industry_experience - mode_industry)
+
+status_m3_plm <- update(status_m2_plm, . ~. + mode_industry)
+status_m4_plm <- update(status_m3_plm, . ~ . +industry_experience)
+status_m5_plm <- update(status_m4_plm, . ~ . +industry_experience*y1_status_v2)
+status_m6_plm <- update(status_m5_plm, . ~ . -mode_industry)
+
+
+
+```
+
+
+Setting up renaming conventions for subsequent model tables 
+```{r}
+# mapping <- c(
+#   # Main Variables of Interest
+#   "unemp_f12_6Unemployed" = "Unemployed 6+",
+#   "race_eth_fct_cpsdNon_white" = "Non-White",
+#   "industry_experience" = "Prior Industry Experience: Yes",
+#   "unemp_f12_6Unemployed:industry_experience" = "Unemployed*Prior Industry Experience",
+#   
+#   # Demographic Variables
+#   "sex_fctFemale" = "Female",
+#   "tage" = "Age", 
+#   "age_sq" = "Age sq",
+#   "immig_fctImmigrant" = "Immigrant",
+#   "marriedMarried" = "Married",
+#   "parent_stdParent" = "Parent",
+#   
+#   # Education 
+#   "educ_fctSome College or Assoc" = "Some College or Assoc",
+#   "educ_fct4-year Degree or More" = "4-Year Degree +",
+#   
+#   # Year Effects
+#   "calyear2015" = "2015",
+#   "calyear2016" = "2016",
+#   "calyear2018" = "2018",
+#   "calyear2019" = "2019",
+#   "calyear2020" = "2020",
+#   "calyear2021" = "2021",
+#   "calyear2022" = "2022",
+#   
+#   # Industry Effects
+#   "mode_industryConstruction" = "Construction",
+#   "mode_industryOther Services, Except Public Administration" = "Other Services",
+#   "mode_industryEducational Services, and Health Care and Social Assistance" = "Educ. & Health",
+#   "mode_industryFinance and Insurance, and Real Estate, and Rental and Leasing" = "Finance & Real Estate",
+#   "mode_industryRetail Trade" = "Retail Trade",
+#   "mode_industryArts, Entertainment, and Recreation, and Accommodation and Food Services" = "Arts & Food Services",
+#   "mode_industryForestry, Farming, Fishing, Hunting, & Mining" = "Forestry, Farming, & Mining",
+#   "mode_industryTransportation, Warehousing & Utilities" = "Transport. & Utilities",
+#   "mode_industryManufacturing" = "Manufacturing",
+#   "mode_industryWholesale Trade" = "Wholesale Trade",
+#   "mode_industryInformation" = "Information",
+#   "mode_industryPublic Administration" = "Public Administration",
+#   
+#   "(Intercept)" = "(Intercept)",
+#   # catch-all 
+#   "..." = "..." 
+#   
+# )
+```
+
+Adding reference category rows
+```{r}
+# rows_to_add <- tribble(
+#   ~term, ~m1, ~m2, ~m3, ~m4, ~m5, ~m6,
+#   "Employed (Reference)", "", "", "", "", "", "", #1
+#   "White (Reference)", "", "", "", "", "", "", #3
+#   "Prior Industry Experience: No (Reference)", "", "", "", "", "", "", #5
+#   "Male (Reference)", "", "", "", "", "", "", # 7
+#   "US Born (Reference)", "", "", "", "", "", "", #11
+#   "Not Married (Reference)", "", "", "", "", "", "", #13
+#   "Not Parent(Reference)", "", "", "", "", "", "", #15
+#   "High School or Less (Reference)", "", "", "", "", "", "", # 17
+#   "Calendar Year: 2014 (Reference)", "", "", "", "", "", "", # 20
+#   "Professional, Scientific, and Management, and Administrative, and Waste Management Services 
+#  (Reference)", "", "", "", "", "", "" # 28
+# )
+# attr(rows_to_add, 'position') <- c(1, 3, 5, 8, 12, 14, 16, 18, 21,29)
+```
+
+
+```{r}
+
+tbl4_status_models_rse <- modelsummary(list(status_m1_plm,
+                                           status_m2_plm, 
+                                           status_m3_plm, 
+                                           status_m4_plm,
+                                           status_m5_plm, 
+                                           status_m6_plm), 
+                                      #coef_map = mapping,
+                                      #add_rows = rows_to_add,
+                                      estimate = "{estimate} ({std.error}){stars}",
+                                      vcov = "robust",
+                                      statistic = NULL,
+                                      title = "Table 4 Robust SE Y1 Status predicting Log Annual Earnings", 
+                                      output = "gt")
+
+tbl4_status_models_rse
+addWorksheet(wb, "Tbl 4 Reg Status Earn RSE")
+writeData(wb, tbl4_status_models_rse, sheet = "Tbl 4 Reg Status Earn RSE")
+```
+
+## 3-month unemployment 
+```{r}
+
+library(plm)
+unemp3_m1_plm <- plm(ln_tpearn_annual ~ unemp_f12_3,
+                    data = person_year, 
+                    index = c("ssuid_spanel_pnum", "calyear"),
+                    model = "random",
+                    random.method = "walhus")
+
+
+unemp3_m2_plm <- plm(ln_tpearn_annual ~ unemp_f12_3  + 
+                   race_eth_fct_cpsd + 
+                   educ_fct + 
+                   tage + 
+                   age_sq + 
+                   sex_fct + 
+                   immig_fct + 
+                   married + 
+                   parent_std +
+                   calyear + 
+                   ln_thnetworth , data = person_year,
+                   index = c("ssuid_spanel_pnum", "calyear"), 
+                   model = "random",random.method = "walhus")
+
+
+
+
+unemp3_m3_plm <- update(unemp3_m2_plm, . ~. + mode_industry)
+unemp3_m4_plm <- update(unemp3_m3_plm, . ~ . +industry_experience)
+unemp3_m5_plm <- update(unemp3_m4_plm, . ~ . +industry_experience*unemp_f12_3)
+unemp3_m6_plm <- update(unemp3_m5_plm, . ~ . -mode_industry)
+
+tbl5_umemp3_models_rse <- modelsummary(list(unemp3_m1_plm,
+                                           unemp3_m2_plm, 
+                                           unemp3_m3_plm, 
+                                           unemp3_m4_plm,
+                                           unemp3_m5_plm, 
+                                           unemp3_m6_plm), 
+                                      #coef_map = mapping,
+                                      #add_rows = rows_to_add,
+                                      estimate = "{estimate} ({std.error}){stars}",
+                                      vcov = "robust",
+                                      statistic = NULL,
+                                      title = "Table 5 Robust SE Unemp 3 months predicting Log Annual Earnings", 
+                                      output = "gt")
+
+tbl5_umemp3_models_rse
+addWorksheet(wb, "Tbl 5 Reg Status Earn RSE")
+writeData(wb, tbl5_status_models_rse, sheet = "Tbl 5 Reg Status Earn RSE")
+
+
+```
+
+
+
+# Profits Unemployment
+```{r models for positive profit}
+# m1_unemp_prftb <- glmer(profposi ~ unemp_f12_6  + 
+#                    educ_fct + 
+#                    tage + 
+#                    age_sq + 
+#                    sex_fct + 
+#                    immig_fct + 
+#                    married + 
+#                    parent_std +
+#                    as.factor(calyear) + 
+#                    mode_industry +
+#                    (1 | ssuid_spanel_pnum),
+#                    control = glmerControl(optimizer = "nloptwrap",
+#                                           calc.derivs = FALSE),
+#                  data = person_year, family = binomial)
+# 
+# 
+# m2_unemp_prftb <- update(m1_unemp_prftb, . ~ .  + race_eth_fct_cpsd)
+# 
+# ## adding industry experience
+# m1_unemp_prftb_ind <- update(m1_unemp_prftb, . ~. + industry_experience)
+# m2_unemp_prftb_ind <- update(m2_unemp_prftb, . ~. + industry_experience)
+# 
+# ## removing mode_industry
+# m1_unemp_prftb_exp <- update(m1_unemp_prftb, . ~. +industry_experience -mode_industry)
+# m2_unemp_prftb_exp <- update(m2_unemp_prftb,. ~. + industry_experience - mode_industry)
 
 ```
 
@@ -516,29 +746,29 @@ m2_unemp_prftb_exp <- update(m2_unemp_prftb,. ~. + industry_experience - mode_in
 
 
 ```{r models for 10k profit}
-m1_unemp_prftb10 <- glmer(prof10k ~ unemp_f12_6  + 
-                   educ_fct + 
-                   tage + 
-                   age_sq + 
-                   sex_fct + 
-                   immig_fct + 
-                   married + 
-                   parent_std +
-                   mode_industry +
-                   as.factor(calyear) +
-                   (1 | ssuid_spanel_pnum),
-                   control = glmerControl(optimizer = "nloptwrap",
-                                          calc.derivs = FALSE),
-                 data = person_year, family = binomial)
-m2_unemp_prftb10 <- update(m1_unemp_prftb10, . ~ .  + race_eth_fct_cpsd)
-
-## adding in experience variable 
-m1_unemp_prftb10_ind <- update(m1_unemp_prftb10, . ~. + industry_experience)
-m2_unemp_prftb10_ind <- update(m2_unemp_prftb10, . ~. + industry_experience)
-
-## just new experience variable 
-m1_unemp_prftb10_exp <- update(m1_unemp_prftb10, . ~. + industry_experience -mode_industry)
-m2_unemp_prftb10_exp <- update(m2_unemp_prftb10, . ~. + industry_experience - mode_industry)
+# m1_unemp_prftb10 <- glmer(prof10k ~ unemp_f12_6  + 
+#                    educ_fct + 
+#                    tage + 
+#                    age_sq + 
+#                    sex_fct + 
+#                    immig_fct + 
+#                    married + 
+#                    parent_std +
+#                    mode_industry +
+#                    as.factor(calyear) +
+#                    (1 | ssuid_spanel_pnum),
+#                    control = glmerControl(optimizer = "nloptwrap",
+#                                           calc.derivs = FALSE),
+#                  data = person_year, family = binomial)
+# m2_unemp_prftb10 <- update(m1_unemp_prftb10, . ~ .  + race_eth_fct_cpsd)
+# 
+# ## adding in experience variable 
+# m1_unemp_prftb10_ind <- update(m1_unemp_prftb10, . ~. + industry_experience)
+# m2_unemp_prftb10_ind <- update(m2_unemp_prftb10, . ~. + industry_experience)
+# 
+# ## just new experience variable 
+# m1_unemp_prftb10_exp <- update(m1_unemp_prftb10, . ~. + industry_experience -mode_industry)
+# m2_unemp_prftb10_exp <- update(m2_unemp_prftb10, . ~. + industry_experience - mode_industry)
 ```
 
 
@@ -597,52 +827,52 @@ mapping <- c(
 ```{r}
 
 
-tbl5_unemp_posprof <- modelsummary(list(m1_unemp_prftb,
-                   m2_unemp_prftb,
-                   m1_unemp_prftb_ind,
-                   m2_unemp_prftb_ind,
-                   m1_unemp_prftb_exp,
-                   m2_unemp_prftb_exp),
-                                      coef_map = mapping,
-                   add_rows = rows_to_add,
-                                  estimate = "{estimate} ({std.error}){stars}",
-                           statistic = NULL,
-                           title = "Table 5 Unemp Predicting Positive Profit",
-             output = "gt")
-
-tbl5_unemp_posprof
-
-addWorksheet(wb, "Tbl 5 Reg Unemp Profit")
-writeData(wb, tbl5_unemp_posprof, sheet = "Tbl 5 Reg Unemp Profit")
+# tbl5_unemp_posprof <- modelsummary(list(m1_unemp_prftb,
+#                    m2_unemp_prftb,
+#                    m1_unemp_prftb_ind,
+#                    m2_unemp_prftb_ind,
+#                    m1_unemp_prftb_exp,
+#                    m2_unemp_prftb_exp),
+#                                       coef_map = mapping,
+#                    add_rows = rows_to_add,
+#                                   estimate = "{estimate} ({std.error}){stars}",
+#                            statistic = NULL,
+#                            title = "Table 5 Unemp Predicting Positive Profit",
+#              output = "gt")
+# 
+# tbl5_unemp_posprof
+# 
+# addWorksheet(wb, "Tbl 5 Reg Unemp Profit")
+# writeData(wb, tbl5_unemp_posprof, sheet = "Tbl 5 Reg Unemp Profit")
 
 ```
 
 ### Table 6 Unemployment and 10k Profit 
 
 ```{r}
-tbl6_unemp_prof10k <- modelsummary(list(m1_unemp_prftb10,
-                   m2_unemp_prftb10,
-                   m1_unemp_prftb10_ind,
-                   m2_unemp_prftb10_ind,
-                   m1_unemp_prftb10_exp,
-                   m2_unemp_prftb10_exp
-              ),
-                                      coef_map = mapping,
-              add_rows = rows_to_add,
-                                  estimate = "{estimate} ({std.error}){stars}",
-                           statistic = NULL,
-                           title = "Table 6 Unemp Predicting 10k Profit",
-             output = "gt")
-
-tbl6_unemp_prof10k
-addWorksheet(wb, "Tbl 6 Reg Unemp 10k Profit")
-writeData(wb, tbl6_unemp_prof10k, sheet = "Tbl 6 Reg Unemp 10k Profit")
+# tbl6_unemp_prof10k <- modelsummary(list(m1_unemp_prftb10,
+#                    m2_unemp_prftb10,
+#                    m1_unemp_prftb10_ind,
+#                    m2_unemp_prftb10_ind,
+#                    m1_unemp_prftb10_exp,
+#                    m2_unemp_prftb10_exp
+#               ),
+#                                       coef_map = mapping,
+#               add_rows = rows_to_add,
+#                                   estimate = "{estimate} ({std.error}){stars}",
+#                            statistic = NULL,
+#                            title = "Table 6 Unemp Predicting 10k Profit",
+#              output = "gt")
+# 
+# tbl6_unemp_prof10k
+# addWorksheet(wb, "Tbl 6 Reg Unemp 10k Profit")
+# writeData(wb, tbl6_unemp_prof10k, sheet = "Tbl 6 Reg Unemp 10k Profit")
 
 ```
 
 
 ```{r}
-saveWorkbook(wb, "working_paper_outputs_20250731.xlsx", overwrite = TRUE)
+saveWorkbook(wb, "working_paper_outputs_20250813.xlsx", overwrite = TRUE)
 ```
 
 
